# rparse

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run_server.sh
apps/rparse/: apps.py  constants.py  dead_code.py  forms.py  parser.py  run_local.py  urls.py  util_classes.py  utils.py  views.py
apps/rparse/icse_result_parser/: parser.py  reader.py  student.py  writer.py
apps/rparse/result_parser/: constants.py  parser.py  reader.py  student.py  utils.py  writer.py
config/: common_settings.py  local_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/rparse/: cbse.html  form.html  home.html  icse.html
