[tool.poetry]
name = "rparse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
XlsxWriter = "^1.4.5"
django-crispy-forms = "^1.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
